// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=8c46f9480c54d607e378",
    194,
    {
      "fullhash": "8c46f9480c54d607e378",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4036,
    {
      "compressed": true,
      "immutable": true,
      "size": 4036,
    },
  ],
  [
    "main.js?var=8c46f9480c54d607e378",
    16227,
    {
      "fullhash": "8c46f9480c54d607e378",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16227,
    },
  ],
]
`;

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): errors 1`] = `[]`;

exports[`"exclude" option matches snapshot for a single \`exclude\` value ({RegExp}): warnings 1`] = `[]`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=8c46f9480c54d607e378",
    194,
    {
      "fullhash": "8c46f9480c54d607e378",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4036,
    {
      "compressed": true,
      "immutable": true,
      "size": 4036,
    },
  ],
  [
    "main.js?var=8c46f9480c54d607e378",
    16227,
    {
      "fullhash": "8c46f9480c54d607e378",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16227,
    },
  ],
]
`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): errors 1`] = `[]`;

exports[`"exclude" option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): warnings 1`] = `[]`;
